crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__basics__I001-minimal-story.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/basics/I001-minimal-story
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Hello, world!\n" [Done]
outcome: Done
