crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__basics__I004-print-number-as-english.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/basics/I004-print-number-as-english
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "You have fifty-eight coins.\n" [Done]
outcome: Done
